feat: refine UI and backend integration flows